# ds-crawler

./: .gitignore  DATALOADERS.MD  README.md  config_example.json  main.py  package-lock.json  pyproject.toml  split_rds.py
crawler/: __init__.py  config.py  parser.py
crawler/handlers/: __init__.py  base.py  generic.py  vkitti2.py
ds-crawler/: config.py  schema.py
ds-crawler/handlers/: __init__.py  base.py
ds_crawler/: __init__.py  _dataset_contract.py  _euler_modalities.py  _version.py  artifact_builder.py  artifacts.py  cli.py  config.py  layout.py  migration.py  operations.py  parser.py  path_filters.py  schema.py  traversal.py  validation.py  writer.py  zip_utils.py
ds_crawler/handlers/: __init__.py  generic.py  zip_handler.py
examples/: augmented_rgb_example.py  config.json  example.py  example_output.json  run.sh  sample_realdrivesim.py
meta/: build_meta_schema.py  schema.json
tests/: conftest.py  current_helpers.py  test_align_datasets.py  test_artifact_builder.py  test_attributes_passthrough.py  test_config.py  test_copy_dataset.py  test_extract_datasets.py  test_handlers.py  test_inline_splits.py  test_integration.py  test_layout.py  test_meta_schema.py  test_new_metadata.py  test_parser.py  test_split_dataset.py  test_validation.py  test_writer.py  test_zip.py
