[project]
name = "ds_crawler"
version = "0.1.3"
description = "Regex-based dataset metadata crawler and indexer"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
progress = ["tqdm"]
dev = ["pytest", "tqdm"]

[project.scripts]
ds-crawler = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ds_crawler", "main.py"]
