[project]
name = "ds_crawler"
version = "2.3.0"
description = "Regex-based dataset metadata crawler and indexer"
requires-python = ">=3.9"
dependencies = ["euler-dataset-contract>=0.1.0"]

[project.optional-dependencies]
progress = ["tqdm"]
dev = ["pytest", "tqdm"]

[project.scripts]
ds-crawler = "ds_crawler.cli:main"
build-meta-schema = "meta.build_meta_schema:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ds_crawler", "meta"]
